# Watsonx-Document-Analysis-Tool-

./: .env.template  .gitignore  README.md  api_server.py  config.py  install.sh  judge_demo.py  pyproject.toml  requirements_analyzer_enhanced.py  run_app.py  run_judge_demo.py  start.sh
.streamlit/: config.toml
agent/: agent.py  embeddings.py  llm.py  state.py  tools.py
backup/: .gitignore  JUDGE_DEMO_README.md  LICENSE
documents/test_product/: enterprise_platform_spec.md
frontend/: streamlit_app.py
scripts/: check_collections.py  check_metadata.py  force_reset_db.py  ingest_docs.py  list_collections.py  start_streamlit_clean.py  test_collections.py
